@@ -1,5 +1,10 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2013-07-10 mmichaud <michael.michaud@free.fr>
+  * Replace HashMap by LinkedHashMap in EditTransaction so that
+    feature order is preserved as much as possible after transactions
+    like delete feature.
+
 2013-06-28 mmichaud <michael.michaud@free.fr>
   * add relate (DE-9IM) operator in Simple Query PlugIn
     (and improve syntax error handling for operators having arguments)
